support harmony_host_url environment variable

--- a/test/opera-rtc-s1-browse/opera-rtc-s1-browse_Regression.ipynb
+++ b/test/opera-rtc-s1-browse/opera-rtc-s1-browse_Regression.ipynb
@@ -14,7 +14,16 @@
     "import harmony\n",
     "\n",
     "\n",
-    "harmony_client = harmony.Client(env=harmony.Environment.UAT)\n",
+    "environments = {\n",
+    "    'http://localhost:3000': harmony.Environment.LOCAL,\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': harmony.Environment.SIT,\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': harmony.Environment.UAT,\n",
+    "    'https://harmony.earthdata.nasa.gov': harmony.Environment.PROD,\n",
+    "}\n",
+    "\n",
+    "harmony_host_url = environ.get('HARMONY_HOST_URL', 'https://harmony.uat.earthdata.nasa.gov')\n",
+    "assert harmony_host_url in environments\n",
+    "harmony_client = harmony.Client(env=environments[harmony_host_url])\n",
     "\n",
     "request = harmony.Request(\n",
     "    collection=harmony.Collection(id='OPERA_L2_RTC-S1_V1'),\n",
@@ -46,7 +55,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
