add cell with parameter tag

--- a/test/opera-rtc-s1-browse/opera-rtc-s1-browse_Regression.ipynb
+++ b/test/opera-rtc-s1-browse/opera-rtc-s1-browse_Regression.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "24ad02a3-f52b-4e10-8654-e28d3e998c59",
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9692ec8e-89e4-4742-9b11-57a8644cd770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +34,6 @@
     "    'https://harmony.uat.earthdata.nasa.gov': harmony.Environment.UAT,\n",
     "    'https://harmony.earthdata.nasa.gov': harmony.Environment.PROD,\n",
     "}\n",
-    "\n",
-    "harmony_host_url = environ.get('HARMONY_HOST_URL', 'https://harmony.uat.earthdata.nasa.gov')\n",
     "assert harmony_host_url in environments\n",
     "harmony_client = harmony.Client(env=environments[harmony_host_url])\n",
     "\n",
