apply black line length recommendations

--- a/test/opera-rtc-s1-browse/opera-rtc-s1-browse_Regression.ipynb
+++ b/test/opera-rtc-s1-browse/opera-rtc-s1-browse_Regression.ipynb
@@ -38,14 +38,19 @@
     "\n",
     "request = harmony.Request(\n",
     "    collection=harmony.Collection(id='OPERA_L2_RTC-S1_V1'),\n",
-    "    granule_name=['OPERA_L2_RTC-S1_T035-073251-IW2_20240512T020817Z_20240512T122756Z_S1A_30_v1.0'],\n",
+    "    granule_name=[\n",
+    "        'OPERA_L2_RTC-S1_T035-073251-IW2_20240512T020817Z_20240512T122756Z_S1A_30_v1.0'\n",
+    "    ],\n",
     "    format='image/png',\n",
     ")\n",
     "job_id = harmony_client.submit(request)\n",
     "harmony_client.wait_for_processing(job_id)\n",
     "\n",
     "with TemporaryDirectory() as temp_dir:\n",
-    "    output_files = [Path(future.result()) for future in harmony_client.download_all(job_id, directory=temp_dir)]\n",
+    "    output_files = [\n",
+    "        Path(future.result())\n",
+    "        for future in harmony_client.download_all(job_id, directory=temp_dir)\n",
+    "    ]\n",
     "\n",
     "    assert len(output_files) == 3\n",
     "    assert output_files[0].suffixes == ['.png']\n",
@@ -55,7 +60,10 @@
     "    reference_data = Path('reference_data')\n",
     "    assert output_files[0].read_bytes() == (reference_data / 'rgb.png').read_bytes()\n",
     "    assert output_files[1].read_bytes() == (reference_data / 'rgb.pgw').read_bytes()\n",
-    "    assert output_files[2].read_bytes() == (reference_data / 'rgb.png.aux.xml').read_bytes()"
+    "    assert (\n",
+    "        output_files[2].read_bytes()\n",
+    "        == (reference_data / 'rgb.png.aux.xml').read_bytes()\n",
+    "    )"
    ]
   }
  ],
