TRT-571 - Update regression tests for net2cog.

--- a/test/net2cog/net2cog_Regression.ipynb
+++ b/test/net2cog/net2cog_Regression.ipynb
@@ -70,18 +70,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "from tempfile import TemporaryDirectory\n",
-    "\n",
     "from harmony import Collection, Environment, Client, Request\n",
-    "from harmony.harmony import ProcessingFailedException\n",
-    "from rasterio.transform import Affine\n",
-    "from rasterio.crs import CRS\n",
     "\n",
-    "import utility\n",
-    "\n",
-    "\n",
-    "reference_dir = Path('./reference_data')"
+    "from utility import validate_smap_outputs"
    ]
   },
   {
@@ -99,16 +90,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "437af5f8",
+   "id": "85d47774",
    "metadata": {},
    "outputs": [],
    "source": [
     "non_production_collection = {\n",
-    "    'smap_collection': Collection(id='C1234410736-POCLOUD'),\n",
+    "    'smap_collection': Collection(id='C1272962474-EEDTEST'),\n",
     "}\n",
     "\n",
     "non_prod_granule_data = {\n",
-    "    'smap_granules': ['G1234601650-POCLOUD'],\n",
+    "    'smap_granules': ['G1272962521-EEDTEST'],\n",
     "}\n",
     "\n",
     "collection_data = {\n",
@@ -147,114 +138,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b32c849",
+   "metadata": {},
+   "source": [
+    "### Single variable request:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc7d75c5",
+   "id": "f2baf2eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
     "\n",
-    "    smap_request = Request(\n",
+    "    smap_single_variable_request = Request(\n",
     "        collection=environment_information['smap_collection'],\n",
     "        granule_id=environment_information['smap_granules'][0],\n",
     "        variables=['sss_smap'],\n",
     "        max_results=1,\n",
     "        format='image/tiff',\n",
     "    )\n",
-    "    print(harmony_client.request_as_curl(smap_request))\n",
+    "    print(harmony_client.request_as_curl(smap_single_variable_request))\n",
     "\n",
-    "    smap_job_id = harmony_client.submit(smap_request)\n",
-    "    harmony_client.wait_for_processing(smap_job_id, show_progress=True)\n",
+    "    smap_single_variable_job_id = harmony_client.submit(smap_single_variable_request)\n",
+    "    harmony_client.wait_for_processing(smap_single_variable_job_id, show_progress=True)\n",
+    "    validate_smap_outputs(harmony_client, smap_single_variable_job_id, 1)\n",
     "else:\n",
     "    print('Skipping test: net2cog is not configured for environment')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b911c99",
+   "metadata": {},
+   "source": [
+    "### Multiple variables specified:\n",
+    "\n",
+    "This test ensures that a request for more than one variable, where those variables are named, will succeed and return output for each variable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22348be6",
+   "id": "fc72842a",
    "metadata": {},
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
-    "    with TemporaryDirectory() as temp_dir:\n",
-    "        downloaded_cog_outputs = [\n",
-    "            file_future.result()\n",
-    "            for file_future in harmony_client.download_all(\n",
-    "                smap_job_id, overwrite=True, directory=temp_dir\n",
-    "            )\n",
-    "        ]\n",
+    "    smap_multi_variable_request = Request(\n",
+    "        collection=environment_information['smap_collection'],\n",
+    "        granule_id=environment_information['smap_granules'][0],\n",
+    "        variables=['sss_smap', 'sss_smap_40km'],\n",
+    "        max_results=1,\n",
+    "        format='image/tiff',\n",
+    "    )\n",
+    "    print(harmony_client.request_as_curl(smap_multi_variable_request))\n",
     "\n",
-    "        for cog_file in downloaded_cog_outputs:\n",
-    "            utility.validate_cog(cog_file)\n",
-    "\n",
-    "            expected_metadata = {\n",
-    "                'driver': 'GTiff',\n",
-    "                'dtype': 'float32',\n",
-    "                'nodata': -9999.0,\n",
-    "                'width': 1440,\n",
-    "                'height': 720,\n",
-    "                'count': 1,\n",
-    "                'crs': CRS.from_epsg(4326),\n",
-    "                'transform': Affine(0.25, 0.0, 0.0, 0.0, 0.25, -90.0),\n",
-    "            }\n",
-    "            reference_file = Path(\n",
-    "                './reference_data',\n",
-    "                'RSS_smap_SSS_L3_8day_running_2020_005_FNL_v04.0_converted_sss_smap.tiff',\n",
-    "            )\n",
-    "\n",
-    "            utility.assert_dataset_produced_correct_results(\n",
-    "                cog_file, expected_metadata, reference_file\n",
-    "            )\n",
+    "    smap_multi_variable_job_id = harmony_client.submit(smap_multi_variable_request)\n",
+    "    harmony_client.wait_for_processing(smap_multi_variable_job_id, show_progress=True)\n",
+    "    validate_smap_outputs(harmony_client, smap_multi_variable_job_id, 2)\n",
     "else:\n",
-    "    print('Skipping verification: net2cog is not configured for this environment')"
+    "    print('Skipping test: net2cog is not configured for environment')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1edc6d53",
+   "id": "42df81cb",
    "metadata": {},
    "source": [
-    "## Test conversion of ALL variables FAILS\n",
+    "### No variables specified (so all variables returned):\n",
     "\n",
-    "net2cog only supports conversion of a single variable within a netcdf file. This tests that an appropriate error message is shown if more than one variable is specified as input."
+    "This should result in 10 output files, 1 each for the following variables:\n",
+    "\n",
+    "* `fland`\n",
+    "* `gice`\n",
+    "* `gland`\n",
+    "* `nobs`\n",
+    "* `nobs_40km`\n",
+    "* `sss_ref`\n",
+    "* `sss_smap`\n",
+    "* `sss_smap_40km`\n",
+    "* `sss_smap_uncertainty`\n",
+    "* `surtep`\n",
+    "\n",
+    "The input NetCDF-4 file has three additional variables that should not be converted to a GeoTIFF:\n",
+    "\n",
+    "* `lat`\n",
+    "* `lon`\n",
+    "* `time`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa3ec02c",
+   "id": "faa512b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
     "\n",
-    "    smap_request = Request(\n",
+    "    smap_all_variable_request = Request(\n",
     "        collection=environment_information['smap_collection'],\n",
     "        granule_id=environment_information['smap_granules'][0],\n",
-    "        variables=['all'],\n",
     "        max_results=1,\n",
     "        format='image/tiff',\n",
     "    )\n",
-    "    print(harmony_client.request_as_curl(smap_request))\n",
+    "    print(harmony_client.request_as_curl(smap_all_variable_request))\n",
     "\n",
-    "    smap_job_id = harmony_client.submit(smap_request)\n",
-    "    raised_expected_error = False\n",
-    "    try:\n",
-    "        harmony_client.wait_for_processing(smap_job_id, show_progress=True)\n",
-    "    except ProcessingFailedException as error:\n",
-    "        assert (\n",
-    "            \"net2cog harmony adapter currently only supports processing one variable at a time\"\n",
-    "            in str(error)\n",
-    "        )\n",
-    "        raised_expected_error = True\n",
-    "        print(error)\n",
+    "    smap_all_variable_job_id = harmony_client.submit(smap_all_variable_request)\n",
+    "    harmony_client.wait_for_processing(smap_all_variable_job_id, show_progress=True)\n",
     "\n",
-    "    assert (\n",
-    "        raised_expected_error\n",
-    "    ), 'Expected request to raise an exception but it did not.'\n",
-    "    utility.print_success('All variables raised expected error')\n",
+    "    # Check all expected variables were produced\n",
+    "    validate_smap_outputs(harmony_client, smap_all_variable_job_id, 10)\n",
     "else:\n",
     "    print('Skipping test: net2cog is not configured for environment')"
    ]
