DAS-2292: reword comment in notebook

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -9,7 +9,7 @@
     "## Regression tests for the Harmony SMAP L2 Gridder \n",
     "\n",
     "\n",
-    "This Jupyter notebook runs a suite of regression tests against some requests against the Harmony SMAP L2 gridding service. \n",
+    "This Jupyter notebook runs a suite of regression tests against the Harmony SMAP L2 gridding service. \n",
     "\n",
     "SMAP Enhanced L2 Radiometer Half-Orbit 9 km EASE-Grid Soil Moisture V006 ([SPL2SMP_E](https://mmt.uat.earthdata.nasa.gov/collections/C1268429712-EEDTEST)) as gridded trajectory input data.\n",
     "\n",
