DAS-2292: Fix default environment

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'"
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
    ]
   },
   {
