DAS-2292: Limit the extent of the comparison of reference files.
By adding a new keyword to the comparison function, we can subset the datatree
output before comparison to limit both x-dim and y-dim to the range [0,2000]

The reference files have been updated as well.

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -224,7 +224,13 @@
     "                test_output\n",
     "            ).exists, 'Unsuccessful Harmony Request: {collection}: {test_name}'\n",
     "            compare_results_to_reference_file(\n",
-    "                test_output, test_reference, identical=False\n",
+    "                test_output,\n",
+    "                test_reference,\n",
+    "                identical=False,\n",
+    "                limit_comparison_dimensions={\n",
+    "                    \"y-dim\": slice(0, 2000),\n",
+    "                    \"x-dim\": slice(0, 2000),\n",
+    "                },\n",
     "            )\n",
     "            print_success(f'{collection} Test.')\n",
     "\n",
