DAS-2292: Add comments and reorder tests and tempdirs.

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -194,7 +194,11 @@
    "id": "316542e3-0e6e-48d0-ad4d-dc02d20bdbe6",
    "metadata": {},
    "source": [
-    "### Run Tests"
+    "### Run Tests\n",
+    "\n",
+    "* The cell below loops through the SMAP L2 collections for the configured environment.\n",
+    "* A request for gridding the L2 data is submitted to Harmony and the results downloaded.\n",
+    "* Verification compares the results to the a previously generated reference data file.  This comparison is done only on the first 2000 rows and 2000 columns of the downloaded data to save memory usage. \n"
    ]
   },
   {
@@ -204,9 +208,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with TemporaryDirectory() as tmp_dir:\n",
-    "    if configuration is not None:\n",
-    "        for collection, test_config in configuration['config'].items():\n",
+    "if configuration is not None:\n",
+    "    for collection, test_config in configuration['config'].items():\n",
+    "        with TemporaryDirectory() as tmp_dir:\n",
+    "\n",
     "            test_request = Request(\n",
     "                collection=test_config['collection_concept_id'],\n",
     "                granule_id=[test_config['granule_id']],\n",
