DAS-2292: Updates method for subsetting the resulting DataTree

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -123,7 +123,11 @@
    "id": "d54ca830-eaff-45b8-ab3b-03fee28f8c94",
    "metadata": {},
    "source": [
-    "### Set up test configuration"
+    "### Set up test configuration\n",
+    "\n",
+    "The next cell organizes the collections and granules to be tested in each environment.\n",
+    "\n",
+    "Additional configuration is set for selecting a subset of the output for comparison in the regression. The selector dictionaries have keys into the top level groups of the output dataset and their dictionaries are subsets along the defined dimensions.  This allows us to compare small parts of very large datasets."
    ]
   },
   {
@@ -133,14 +137,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "spl2smp_e_selector = {\n",
+    "    \"Soil_Moisture_Retrieval_Data\": {\n",
+    "        \"y-dim\": slice(0, 1000),\n",
+    "        \"x-dim\": slice(1500, 2500),\n",
+    "    },\n",
+    "    \"Soil_Moisture_Retrieval_Data_Polar\": {\n",
+    "        \"y-dim\": slice(1000, 2000),\n",
+    "        \"x-dim\": slice(1000, 2000),\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "spl2smap_selector = {\n",
+    "    \"Soil_Moisture_Retrieval_Data_3km\": {\n",
+    "        \"y-dim\": slice(1000, 2000),\n",
+    "        \"x-dim\": slice(8800, 9800),\n",
+    "    },\n",
+    "    \"Soil_Moisture_Retrieval_Data\": {\n",
+    "        \"y-dim\": slice(0, 1000),\n",
+    "        \"x-dim\": slice(2500, 3500),\n",
+    "    },\n",
+    "}\n",
+    "\n",
     "non_production_configuration = {\n",
     "    'SPL2SMP_E': {\n",
     "        'collection_concept_id': Collection(id='C1268429712-EEDTEST'),\n",
     "        'granule_id': 'G1268429718-EEDTEST',\n",
+    "        'selector': spl2smp_e_selector,\n",
     "    },\n",
     "    'SPL2SMAP': {\n",
     "        'collection_concept_id': Collection(id='C1268429748-EEDTEST'),\n",
     "        'granule_id': 'G1268429753-EEDTEST',\n",
+    "        'selector': spl2smap_selector,\n",
     "    },\n",
     "}\n",
     "\n",
@@ -149,10 +177,12 @@
     "    'SPL2SMP_E': {\n",
     "        'collection_concept_id': Collection(id='TBD'),\n",
     "        'granule_id': '',\n",
+    "        'selector': spl2smp_e_selector,\n",
     "    },\n",
     "    'SPL2SMAP': {\n",
     "        'collection_concept_id': Collection(id='TBD'),\n",
     "        'granule_id': '',\n",
+    "        'selector': spl2smap_selector,\n",
     "    },\n",
     "}"
    ]
@@ -232,10 +262,7 @@
     "                test_output,\n",
     "                test_reference,\n",
     "                identical=False,\n",
-    "                limit_comparison_dimensions={\n",
-    "                    \"y-dim\": slice(0, 2000),\n",
-    "                    \"x-dim\": slice(0, 2000),\n",
-    "                },\n",
+    "                subset_selector=test_config.get('selector', None),\n",
     "            )\n",
     "        print_success(f'{collection} Test.')\n",
     "\n",
