DAS-2311 - updated requests to HOSS to include output format

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -208,6 +208,7 @@
     "        granule_id=[hoss_info['granule_id']],\n",
     "        variables=['atmosphere_cloud_liquid_water_content'],\n",
     "        spatial=hoss_var_bbox_bbox,\n",
+    "        format='application/netcdf'\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, hoss_var_bbox_request, hoss_var_bbox_file_name)\n",
@@ -261,6 +262,7 @@
     "        granule_id=[hoss_info['granule_id']],\n",
     "        variables=['atmosphere_cloud_liquid_water_content'],\n",
     "        spatial=grid_edge_bbox,\n",
+    "        format='application/netcdf'\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, grid_edge_request, grid_edge_file_name)\n",
@@ -300,6 +302,7 @@
     "        collection=hoss_info['collection'],\n",
     "        granule_id=[hoss_info['granule_id']],\n",
     "        variables=['sst_dtime', 'wind_speed'],\n",
+    "        format='application/netcdf'\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, no_bbox_request, no_bbox_file_name)\n",
@@ -338,6 +341,7 @@
     "        collection=hoss_info['collection'],\n",
     "        granule_id=[hoss_info['granule_id']],\n",
     "        spatial=hoss_all_vars_bbox,\n",
+    "        format='application/netcdf'\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, hoss_all_vars_request, hoss_all_vars_file_name)\n",
@@ -403,6 +407,7 @@
     "            'start': datetime(2021, 6, 9, 12, 0, 0),\n",
     "            'stop': datetime(2021, 6, 9, 16, 0, 0),\n",
     "        },\n",
+    "        format='application/netcdf'\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, hoss_temporal_request, hoss_temporal_file_name)\n",
@@ -443,6 +448,7 @@
     "        granule_id=[hoss_info['granule_id']],\n",
     "        variables=['atmosphere_cloud_liquid_water_content'],\n",
     "        dimensions=[Dimension('latitude', -20, -5), Dimension('longitude', 70, 85)],\n",
+    "        format='application/netcdf'\n",
     "    )\n",
     "\n",
     "    submit_and_download(\n",
@@ -512,6 +518,7 @@
     "        granule_id=hoss_shape_info['granule_id'],\n",
     "        shape=hoss_shape_info['shape_file_path'],\n",
     "        variables=['Grid/precipitationCal'],\n",
+    "        format='application/netcdf'\n",
     "    )\n",
     "    submit_and_download(harmony_client, hoss_shape_request, hoss_shape_file_name)\n",
     "    assert exists(\n",
@@ -558,6 +565,7 @@
     "            'start': datetime(2020, 1, 18, 18, 45, 0),\n",
     "            'stop': datetime(2020, 1, 18, 19, 45, 0),\n",
     "        },\n",
+    "        format='application/netcdf'\n",
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, hoss_bounds_request, hoss_bounds_file_name)\n",
@@ -610,6 +618,7 @@
     "        'start': datetime(2008, 7, 2, 0, 0, 0),\n",
     "        'stop': datetime(2008, 7, 2, 1, 0, 0),\n",
     "    },\n",
+    "    \n",
     "}\n",
     "\n",
     "hoss_projected_env = {\n",
@@ -639,6 +648,7 @@
     "        spatial=hoss_projected_info['bbox'],\n",
     "        variables=['NEE', 'lat', 'lon'],\n",
     "        temporal=hoss_projected_info['temporal_range'],\n",
+    "        format='application/netcdf'\n",
     "    )\n",
     "    submit_and_download(harmony_client, hoss_projected_request, hoss_projected_filename)\n",
     "    assert exists(hoss_projected_filename), 'Unsuccessful HOSS spatial subset request.'\n",
@@ -685,6 +695,7 @@
     "        shape=hoss_projected_info['shape_file_path'],\n",
     "        variables=['NEE', 'lat', 'lon'],\n",
     "        temporal=hoss_projected_info['temporal_range'],\n",
+    "        format='application/netcdf'\n",
     "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, hoss_projected_request, hoss_projected_shape_filename\n",
@@ -740,9 +751,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.16"
   },
-  "name": "SDS_Regression.ipynb"
+  "name": "HOSS_Regression.ipynb"
  },
  "nbformat": 4,
  "nbformat_minor": 5
