DAS-2292: typos in comments

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -228,7 +228,7 @@
     "\n",
     "* The cell below loops through the SMAP L2 collections for the configured environment.\n",
     "* A request for gridding the L2 data is submitted to Harmony and the results downloaded.\n",
-    "* Verification compares the results to the a previously generated reference data file.  This comparison is done only on the first 2000 rows and 2000 columns of the downloaded data to save memory usage. \n"
+    "* Verification compares the results to a previously generated and subsetted reference data file.  This comparison is done only on the first 2000 rows and 2000 columns of the downloaded data to save memory usage. \n"
    ]
   },
   {
