DAS-2293: Add config to test SPL2SMA

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -159,6 +159,19 @@
     "    },\n",
     "}\n",
     "\n",
+    "\n",
+    "spl2sma_slice = {\n",
+    "    \"y-dim\": slice(0, 1000),\n",
+    "    \"x-dim\": slice(9500, 10500),\n",
+    "}\n",
+    "\n",
+    "spl2sma_selector = {\n",
+    "    \"Soil_Moisture_Retrieval_Data\": spl2sma_slice,\n",
+    "    \"Radar_Data\": spl2sma_slice,\n",
+    "    \"Ancillary_Data\": spl2sma_slice,\n",
+    "}\n",
+    "\n",
+    "\n",
     "non_production_configuration = {\n",
     "    'SPL2SMP_E': {\n",
     "        'collection_concept_id': Collection(id='C1268429712-EEDTEST'),\n",
@@ -169,6 +182,11 @@
     "        'collection_concept_id': Collection(id='C1268429748-EEDTEST'),\n",
     "        'granule_id': 'G1268429753-EEDTEST',\n",
     "        'selector': spl2smap_selector,\n",
+    "    },\n",
+    "    'SPL2SMA': {\n",
+    "        'collection_concept_id': Collection(id='C1268429729-EEDTEST'),\n",
+    "        'granule_id': 'G1268429743-EEDTEST',\n",
+    "        'selector': spl2sma_selector,\n",
     "    },\n",
     "}\n",
     "\n",
@@ -183,6 +201,11 @@
     "        'collection_concept_id': Collection(id='TBD'),\n",
     "        'granule_id': '',\n",
     "        'selector': spl2smap_selector,\n",
+    "    },\n",
+    "    'SPL2SMA': {\n",
+    "        'collection_concept_id': Collection(id='C1236303826-NSIDC_ECS'),\n",
+    "        'granule_id': '',\n",
+    "        'selector': spl2sma_selector,\n",
     "    },\n",
     "}"
    ]
@@ -241,7 +264,6 @@
     "if configuration is not None:\n",
     "    for collection, test_config in configuration['config'].items():\n",
     "        with TemporaryDirectory() as tmp_dir:\n",
-    "\n",
     "            test_request = Request(\n",
     "                collection=test_config['collection_concept_id'],\n",
     "                granule_id=[test_config['granule_id']],\n",
